# streamlit_docker_demo

./: Dockerfile  pyproject.toml  requirements.txt
