[tool.poetry]
name = "streamlit_demo"
version = "0.1.0"
description = ""
authors = ["fsimoes81 <fabio.simoes@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.8"
scipy = "^1.9.2"
streamlit = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
